--- a/admin/review.html
+++ b/admin/review.html
@@ -2,14 +2,16 @@
 <html>
     <head>
         <title>祐肯請假系統</title>
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+		
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-        <link rel="stylesheet" href="../css/假單審核.css">
-        <script src="../js/假單審核.js"></script>
+
+        <link rel="icon" type="image/x-icon" href="../img/logo.ico">
+        <link rel="stylesheet" href="../css/adminReview.css">
     </head>
     <body>
         <div class="wrapper">
@@ -22,10 +24,12 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="./員工資料維護.html">員工資料維護</a></li>
-                        <li><a href="./員工請假資訊.html">員工請假資訊</a></li>
-                        <li><a href="./假單審核.html">假單審核</a></li>
-                        <li><a href="./休假行事曆.html">休假行事曆</a></li>
+                        <li><a href="./maintain.html">員工資料維護</a></li>
+                        <li><a href="./information.html">員工請假資訊</a></li>
+                        <li><a href="./review.html">假單審核</a></li>
+                        <li><a href="./calendar.html">行事曆</a></li>
+                        <li><a href="./personnel.html">在職員工</a></li>
+                        <li><a href="./log.html">過審紀錄</a></li>
                     </ul> 
                 </nav>
             </aside>
@@ -73,6 +77,6 @@
         <footer class="footer">
 			<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
 		</footer>
-        <script src="../js/假單審核.js"></script>
+        <script src="../js/adminReview.js"></script>
     </body>
 </html>
