--- a/admin/adminMain.html
+++ b/admin/adminMain.html
@@ -2,13 +2,16 @@
 <html>
 	<head>
         <title>祐肯請假系統</title>
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
-        <script src="../js/jquery-3.7.1.min.js"></script>
+
+		<script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-		<link rel="stylesheet" href="../css/admin.css">
+
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+		<link rel="stylesheet" href="../css/adminMain.css">
 	</head>
     <body>
 		<div class="wrapper">
@@ -21,20 +24,26 @@
 			<br>
 
 			<div class="main">
-				<a href = "./員工資料維護.html"></a>
+				<a href = "./maintain.html"></a>
 					<button class="button">員工資料維護</button>
 				</a>
 				<br>
-				<a href = "./員工請假資訊.html">
+				<a href = "./information.html">
 					<button class="button">員工請假資訊</button>
 				</a>
 				<br>
-				<a href = "./假單審核.html">
+				<a href = "./review.html">
 					<button class="button">假單審核</button>
 				</a>
 				<br>
-				<a href = "./休假行事曆.html">
-					<button class="button">休假行事曆</button>
+				<a href = "./calendar.html">
+					<button class="button">行事曆</button>
+				</a>
+				<a href = "./personnel.html">
+					<button class="button">在職員工</button>
+				</a>
+				<a href = "./log.html">
+					<button class="button">過審紀錄</button>
 				</a>
 			</div>
 
