--- a/employee/employeeMain.html
+++ b/employee/employeeMain.html
@@ -2,33 +2,34 @@
 <html>
 	<head>
 		<title>祐肯請假系統</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
-        <script src="../js/jquery-3.7.1.min.js"></script>
+		
+		<script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+		
+		<link rel="icon" type="image/x-icon" href="../../img/logo.ico">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-		<link rel="stylesheet" href="../css/employee.css">
-		<script src="../js/employeePage.js"></script>
+		<link rel="stylesheet" href="../css/employeeMain.css">
 	</head>
     <body>
 		<div id="full">
 			<h1 style="font-size: 380%; "><b>員工請假專區</b></h1>
 			<div id="Check_in" style="position: relative; right:40%;">
-				<a href="../employee/打卡.html">
+				<a href="./checkIn.html">
 					<button>打卡</button>
 				</a>
 			</div>
 			<div id = "worker_calendar" style="position: relative; left:40%;">
-				<a href="../admin/休假行事曆.html">
-					<button>休假行事曆</button>
+				<a href="./calendar.html">
+					<button>行事曆</button>
 				</a>
 			</div>
 			<div class="btndiv w3-card w3-border" id="viewDataDiv">
-				<a href="../employee/查看請假紀錄.html">
+				<a href="./documental.html">
 					<button class="menubtn" id="viewdata">
 						<span style="font-size: 200%;">請假紀錄</span> 
 						<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
@@ -36,7 +37,7 @@
 				</a>
 			</div>
 			<div class="btndiv w3-card w3-border" id="newDayOffDiv">
-				<a href="../employee/請假.html">
+				<a href="./leave.html">
 					<button class="menubtn" id="newdayoff">
 					<span style="font-size: 200%;">請假</span>
 					<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
