--- a/employee/leave.html
+++ b/employee/leave.html
@@ -2,14 +2,17 @@
 <html>
 	<head>
         <title>祐肯請假系統</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+		<meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
-        <script src="../js/jquery-3.7.1.min.js"></script>
+		
+		<script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-		<link rel="stylesheet" href="../css/newDayoff.css"> 
-		<script src="../js/newDayoffPage.js"></script>
+		
+		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
+        <link rel="stylesheet" href="../css/employeeleave.css"> 
+		<script src="../js/employeeleave.js"></script>
 	</head>
 	
 	<body>
@@ -23,10 +26,10 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="./打卡.html">打卡</a></li>
-                        <li><a href="./休假行事曆.html">休假行事曆</a></li>
-                        <li><a href="./查看請假紀錄.html">查看請假紀錄</a></li>
-                        <li><a href="./請假.html">請假</a></li>
+                        <li><a href="./checkIn.html">打卡</a></li>
+                        <li><a href="./calendar.html">行事曆</a></li>
+                        <li><a href="./documental.html">查看請假紀錄</a></li>
+                        <li><a href="./checkIn.html">請假</a></li>
                     </ul> 
                 </nav>
             </aside>
@@ -94,5 +97,6 @@
 		<footer class="footer">
 			<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
 		</footer>
+		<script src="../js/employeeleave.js"></script>
 	</body>
 </html>
