--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="js/jquery-3.7.1.min.js"></script>
-        <script src="js/cookieOperation.js"></script>
-        <script src="js/loginPage.js"></script>
 		<title>祐肯請假系統</title>
+
+        <script src="index/index-js/jquery-3.7.1.min.js"></script>
+        <script src="index/index-js/cookieOperation.js"></script>
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<link rel="stylesheet" href="./css/mainPage.css">
+		
 		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="js/index.js"></script>
+		<link rel="stylesheet" href="css/index.css">
     </head>
 	<body>
 		<div class="wrapper">
