在職員工與過審紀錄的頁面已完成部分

--- a/admin/log.html
+++ b/admin/log.html
@@ -17,7 +17,7 @@
         <div class="wrapper">
 
             <header class="header">
-                <span class="title">員工資料維護</span>
+                <span class="title">過審紀錄</span>
                 <span><img class="img" src="../img/logo.png"></span>
             </header>
 
@@ -35,7 +35,106 @@
             </aside>
         
             <div class="main">
-
+                <div id="search">
+                    <input placeholder="員工編號" id="code" class="search">
+                    <input placeholder="年度" id="year" class="search">
+                    <button id="searching" class="button">搜尋</button>
+                </div>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>流水號</th>
+                            <th>假別</th>
+                            <th>開始時間</th>
+                            <th>結束時間</th>
+                            <th>電子信箱</th>
+                            <th>直屬主管</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="btn" colspan="2"><button>上一頁</button></td>
+                            <td class="btn" colspan="2">目前在 / 還有 頁</td>
+                            <td class="btn" colspan="2"><button>上一頁</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
             
         </div>
