--- a/admin/personnel.html
+++ b/admin/personnel.html
@@ -11,7 +11,7 @@
         <script src="../js/cookieOperation.js"></script>
 
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
-        <link rel="stylesheet" href="../css/adminPersonne.css"
+        <link rel="stylesheet" href="../css/adminPersonne.css">
     </head>
     <body>
         <div class="wrapper">
@@ -35,7 +35,101 @@
             </aside>
 
             <div class="main">
-
+                <table>
+                    <thead>
+                        <tr>
+                            <th>員工編號</th>
+                            <th>身分證字號</th>
+                            <th>員工姓名</th>
+                            <th>到職日期</th>
+                            <th>電子信箱</th>
+                            <th>直屬主管</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td class="btn" colspan="2"><button>上一頁</button></td>
+                            <td class="btn" colspan="2">目前在 / 還有 頁</td>
+                            <td class="btn" colspan="2"><button>上一頁</button></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
 
         </div>
