--- a/admin/information.html
+++ b/admin/information.html
@@ -8,6 +8,9 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         
         <link rel="stylesheet" href="../css/adminInformation.css">
+
+        <script src="index/index-js/jquery-3.7.1.min.js"></script>
+        <script src="index/index-js/cookieOperation.js"></script>
     </head>
 
     <body>
@@ -106,8 +109,6 @@
         <footer class="footer">
             <small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
         </footer>
-        <script src="../js/jquery-3.7.1.min.js"></script>
-        <script src="../js/cookieOperation.js"></script>
 
     </body>
 </html>
