--- a/admin/adminMain.html
+++ b/admin/adminMain.html
@@ -8,6 +8,9 @@
 		<link rel="icon" type="image/x-icon" href="./img/logo.ico">
 
 		<link rel="stylesheet" href="../css/adminMain.css">
+
+		<script src="index/index-js/jquery-3.7.1.min.js"></script>
+        <script src="index/index-js/cookieOperation.js"></script>
 	</head>
     <body>
 		<div class="wrapper">
@@ -48,7 +51,5 @@
 			</footer>
 		</div>
 
-		<script src="../js/jquery-3.7.1.min.js"></script>
-        <script src="../js/cookieOperation.js"></script>
     </body>
 </html>
