--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<script src="index/index-js/jquery-3.7.1.min.js"></script>
-        <script src="index/index-js/cookieOperation.js"></script>
-
 		<title>祐肯請假系統</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
@@ -31,6 +28,8 @@
 				</div>
 			</div>
 		</div>
+		<script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/cookieOperation.js"></script>
 		<script src="js/index.js"></script>
 	</body>
 	
