--- a/employee/calendar.html
+++ b/employee/calendar.html
@@ -8,9 +8,6 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         
         <link rel="stylesheet" href="../css/calendar.css">
-
-        <script src="index/index-js/jquery-3.7.1.min.js"></script>
-        <script src="index/index-js/cookieOperation.js"></script>
     </head>
     <body>
         <div class="wrapper">
@@ -142,6 +139,8 @@
         <footer class="footer">
             <small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
         </footer>
+        <script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/cookieOperation.js"></script>
         <script src="../js/calendar.js"></script>
     </body>
 </html>
