--- a/employee/employeeMain.html
+++ b/employee/employeeMain.html
@@ -11,9 +11,6 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="../css/employeeMain.css">
-
-		<script src="index/index-js/jquery-3.7.1.min.js"></script>
-        <script src="index/index-js/cookieOperation.js"></script>
 	</head>
     <body>
 		<div id="full">
@@ -48,5 +45,7 @@
 		<div id="version">
 			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
 		</div>
+		<script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/cookieOperation.js"></script>
     </body>
 </html>
