--- a/employee/leave.html
+++ b/employee/leave.html
@@ -8,9 +8,6 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         
 		<link rel="stylesheet" href="../css/employeeleave.css"> 
-
-		<script src="index/index-js/jquery-3.7.1.min.js"></script>
-        <script src="index/index-js/cookieOperation.js"></script>
 	</head>
 	
 	<body>
@@ -95,6 +92,8 @@
 		<footer class="footer">
 			<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
 		</footer>
+		<script src="js/jquery-3.7.1.min.js"></script>
+        <script src="js/cookieOperation.js"></script>
 		<script src="../js/employeeleave.js"></script>
 	</body>
 </html>
