--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@
 		<link rel="stylesheet" href="css/index.css">
     </head>
 	<body>
-		<div class="wrapper">
-			<div class="fullscreen">
-				<div class="field"></div>
-					<h1>
-						祐肯企業<br>請假系統
-					</h1>
-					<div class="inputs">
-						<input type = "text" id = "code" placeholder = "輸入編號" />
-					</div>
-					<div class="inputs">
-						<input type = "password" id = "pw" placeholder = "輸入密碼" />
-					</div>
-					<div class="inputs">
-						<button class="glow-on-hover" id="login">登入</button>
-					</div>
+		<div class="fullscreen">
+			<div class="field">
+				<h1>
+					祐肯企業<br>請假系統
+				</h1>
+				<div class="inputs">
+					<input type = "text" id = "code" placeholder = "輸入編號" />
+				</div>
+				<div class="inputs">
+					<input type = "password" id = "pw" placeholder = "輸入密碼" />					
+				</div>
+				<div class="inputs">
+					<button class="glow-on-hover" id="login">登入</button>
 				</div>
 			</div>
 		</div>
