--- a/employee/employeeMain.html
+++ b/employee/employeeMain.html
@@ -8,44 +8,52 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../../img/logo.ico">
 		
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
 		<link rel="stylesheet" href="../css/employeeMain.css">
 	</head>
     <body>
-		<div id="full">
-			<h1 style="font-size: 380%; "><b>員工請假專區</b></h1>
-			<div id="Check_in" style="position: relative; right:40%;">
-				<a href="./checkIn.html">
-					<button>打卡</button>
-				</a>
+		<header>
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					<div class="container-fluid">
+						<a class="navbar-brand" href="./employeeMain.html"><img src="../img/logo.png"></a>
+						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon">
+								
+							</span>
+						</button>
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./leave.html">請假</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./documental.html">請假紀錄</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./checkIn.html">打卡</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</nav>
+		</header>
+		
+		
+
+		<section>
+			<div class="text-center">
+				<img src="../img/勞基法特休假天數計算規定.jpg" class="rounded" alt="勞基法特休假天數計算規定">
+				<img src="../img/注意事項.jpg" class="rounded" alt="注意事項">
 			</div>
-			<div id = "worker_calendar" style="position: relative; left:40%;">
-				<a href="./calendar.html">
-					<button>行事曆</button>
-				</a>
-			</div>
-			<div class="btndiv w3-card w3-border" id="viewDataDiv">
-				<a href="./documental.html">
-					<button class="menubtn" id="viewdata">
-						<span style="font-size: 200%;">請假紀錄</span> 
-						<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
-					</button>
-				</a>
-			</div>
-			<div class="btndiv w3-card w3-border" id="newDayOffDiv">
-				<a href="./leave.html">
-					<button class="menubtn" id="newdayoff">
-					<span style="font-size: 200%;">請假</span>
-					<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
-				</button>
-				</a>
-			</div>
-		</div>
-		<div id="version">
-			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
-		</div>
+		</section>
+
 		<script src="js/jquery-3.7.1.min.js"></script>
         <script src="js/cookieOperation.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     </body>
 </html>
