員工端導覽列順序完成，主管端Logo改成無功用

--- a/employee/leave.html
+++ b/employee/leave.html
@@ -24,13 +24,13 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./checkIn.html">打卡</a>
+								</li>
+								<li class="nav-item">
 									<a class="nav-link active" aria-current="page" href="./leave.html">請假</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link active" aria-current="page" href="./documental.html">請假紀錄</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./checkIn.html">打卡</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
@@ -46,7 +46,7 @@
 		<section>
 			<div class="container">
 				<div class="row align-items-start">
-					<div class="col">
+					<div class="col text-center">
 						<div class="main">
 							<h1>請假</h1>
 							<!-- <form action="http://eucan.ddns.net:3000/request" method="post" enctype="multipart/form-data"> -->
@@ -91,10 +91,6 @@
 							<button type="submit" id="submit" class="input btn btn-secondary">確定</button>
 							<!-- </form> -->
 						</div>
-					</div>
-					<div class="col">
-						<img src="../img/勞基法特休假天數計算規定.jpg" class="img-thumbnail" alt="勞基法特休假天數計算規定">
-						<img src="../img/注意事項.jpg" class="img-thumbnail" alt="注意事項">
 					</div>
 				</div>
 			</div>
