--- a/admin/review copy.html
+++ b/admin/review copy.html
@@ -53,8 +53,8 @@
 			<div class="container">
                 <div class="row">
                     <div id="card-body">
-                    </section>
-                    
+						
+					</div>
                 </div>
             </div>
 		</section>
