--- a/admin/personnel.html
+++ b/admin/personnel.html
@@ -33,7 +33,7 @@
 									<a class="nav-link active" aria-current="page" href="./maintain.html">員工資料維護</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./personnel.html">在職員工</a>
+									<a class="nav-link active" aria-current="page" href="./personnel copy.html">在職員工</a>
 								</li>
                                 <li class="nav-item">
 									<a class="nav-link active" aria-current="page" href="./log.html">過審紀錄</a>
