--- a/admin/personnel copy.html
+++ b/admin/personnel copy.html
@@ -54,8 +54,22 @@
                 <div class="row">
                     <div class="col">
                         <h1>在職員工</h1>
-                        <div >
-                            
+                        <div>
+                            <table class="table table-bordered table-striped">
+                                <thead  class="table-dark">
+                                    <tr>
+                                        <th>員工編號</th>
+                                        <th>身分證字號</th>
+                                        <th>員工姓名</th>
+                                        <th>到職日期</th>
+                                        <th>電子信箱</th>
+                                        <th>直屬主管</th>
+										<th>是否審核</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="table">
+								</tbody>
+							</table>
                         </div>
                     </div>
                 </div>
