--- a/admin/review.html
+++ b/admin/review.html
@@ -52,7 +52,7 @@
 		<section>
 			<div class="container">
                 <div class="row">
-                    <div id="card-body">
+                    <div class="text-nowrap" id="card-body">
 						
 					</div>
                 </div>
