--- a/admin/review.html
+++ b/admin/review.html
@@ -51,7 +51,11 @@
 
 		<section>
 			<div class="container">
-                <div class="row">
+                <div>
+                    <h1>假單審核</h1>
+                    <h2 id="dataLong"></h2>
+                </div>
+                <div class="d-flex justify-content-center">
                     <div class="text-nowrap" id="card-body">
 						
 					</div>
