假單審核與過審記錄的js重新命名，過審記錄的js動態顯示未完成

--- a/admin/log.html
+++ b/admin/log.html
@@ -53,13 +53,14 @@
 			<div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1>過審紀錄</h1>
+						<div>
+							<h1>過審紀錄</h1>
+						</div>
                         <div id="search">
                             <input placeholder="員工編號" id="code" class="search">
                             <input placeholder="年度" id="year" class="search">
                             <button id="searching" class="search ">搜尋</button>
                         </div>
-
                         <div>
                             <table class="table table-bordered table-striped">
                                 <thead  class="table-dark">
@@ -72,7 +73,7 @@
                                         <th>直屬主管</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="table">
                                     
                                 </tbody>
                             </table>
@@ -87,6 +88,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-        <script src="../js/log.js"></script>
+        <script src="../js/adminLog.js"></script>
     </body>
 </html>
