過審記錄完成，以及在職員工小修正完成

--- a/admin/log.html
+++ b/admin/log.html
@@ -66,11 +66,12 @@
                                 <thead  class="table-dark">
                                     <tr>
                                         <th>流水號</th>
-                                        <th>假別</th>
+                                        <th>員工姓名</th>
+										<th>假別</th>
                                         <th>開始時間</th>
                                         <th>結束時間</th>
-                                        <th>電子信箱</th>
-                                        <th>直屬主管</th>
+                                        <th>總時數</th>
+                                        <th>理由</th>
                                     </tr>
                                 </thead>
                                 <tbody id="table">
