--- a/employee/checkIn.html
+++ b/employee/checkIn.html
@@ -62,23 +62,19 @@
 						</button>
                     </div>
                 </div>
-				<div class="row">
-					<div class="col text-center">
-						<p>簽到狀態</p>
-					</div>
-				</div>
+				<p id="time"></p>
 				<div class="row">
 					<div class="col text-center">
 						<table class="table table-bordered table-striped">
-							<thead>
+							<tbody>
 								<tr>
-									<th class="table-dark">姓名</th>
-									<th class="table-dark">狀態</th>
-									<th class="table-dark">時間</th>
+									<th>上班</th>
+									<td id="work"></td>
 								</tr>
-							</thead>
-							<tbody id="table">
-								
+								<tr>
+									<th>下班</th>
+									<td id="rest"></td>
+								</tr>
 							</tbody>
 						</table>
 					</div>
@@ -91,5 +87,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-    </body>
+		<script src="../js/employeecheckIn.js"></script>
+	</body>
 </html>
