員工資訊js檔半成，請假業面刪除時數計算

--- a/admin/information.html
+++ b/admin/information.html
@@ -75,47 +75,47 @@
                                 <tbody>
                                     <tr>
                                         <th>特休假</th>
-                                        <td><output id="特休假"></output></td>
+                                        <td><output id="annual"></output></td>
                                     </tr>
                                     <tr>
                                         <th>事假</th>
-                                        <td><output id="事假"></output></td>
+                                        <td><output id="personnel"></output></td>
                                     </tr>
                                     <tr>
                                         <th>家庭照顧假</th>
-                                        <td><oupt id="家庭照顧假"></oupt></td>
+                                        <td><oupt id="care"></oupt></td>
                                     </tr>
                                     <tr>
                                         <th>普通傷病假</th>
-                                        <td><output id="普通傷病假"></output></td>
+                                        <td><output id="sick"></output></td>
                                     </tr>
                                     <tr>
                                         <th>婚假</th>
-                                        <td><output id="婚假"></output></td>
+                                        <td><output id="wedding"></output></td>
                                     </tr>
                                     <tr>
                                         <th>喪假</th>
-                                        <td><output id="喪假"></output></td>
+                                        <td><output id="funeral"></output></td>
                                     </tr>
                                     <tr>
                                         <th>分娩假</th>
-                                        <td><output id="分娩假"></output></td>
+                                        <td><output id="birth"></output></td>
                                     </tr>
                                     <tr>
                                         <th>產檢假</th>
-                                        <td><output id="產檢假"></output></td>
+                                        <td><output id="pcheckuo"></output></td>
                                     </tr>
                                     <tr>
                                         <th>流產假</th>
-                                        <td><output id="流產假"></output></td>
+                                        <td><output id="miscarriage"></output></td>
                                     </tr>
                                     <tr>
                                         <th>陪產假</th>
-                                        <td><output id="陪產假"></output></td>
+                                        <td><output id="paternity"></output></td>
                                     </tr>
                                     <tr>
                                         <th>產假</th>
-                                        <td><output id="產假"></output>
+                                        <td><output id="maternity"></output>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -131,6 +131,6 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-        
+        <script src="../js/adminInformation.js"></script>
     </body>
 </html>
