employeeMain 圖片排版改良

--- a/employee/employeeMain.html
+++ b/employee/employeeMain.html
@@ -45,8 +45,8 @@
 
 		<section>
 			<div class="text-center">
-				<img src="../img/勞基法特休假天數計算規定.jpg" class="rounded" alt="勞基法特休假天數計算規定">
-				<img src="../img/注意事項.jpg" class="rounded" alt="注意事項">
+				<img src="../img/勞基法特休假天數計算規定.jpg" class="rounded img-fluid" alt="勞基法特休假天數計算規定">
+				<img src="../img/注意事項.jpg" class="rounded img-fluid" alt="注意事項">
 			</div>
 		</section>
 
