在職員工新增刪除員工功能，價單審核添加彈出視窗

--- a/admin/personnel.html
+++ b/admin/personnel.html
@@ -65,6 +65,7 @@
                                         <th>電子信箱</th>
                                         <th>直屬主管</th>
 										<th>是否審核</th>
+										<th>刪除員工</th>
                                     </tr>
                                 </thead>
                                 <tbody id="table">
