--- a/admin/maintain.html
+++ b/admin/maintain.html
@@ -30,7 +30,7 @@
 									<a class="nav-link active" aria-current="page" href="./information.html">員工請假資訊</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./maintain.html">員工資料維護</a>
+									<a class="nav-link active" aria-current="page" href="./maintain.html">新增員工</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link active" aria-current="page" href="./personnel.html">在職員工</a>
@@ -53,7 +53,7 @@
 			<div class="container">
                 <div class="row">
                     <div class="col">
-                        <h1>員工資料維護</h1>
+                        <h1>新增員工</h1>
                         <div class="row text-center">
                             <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg input">員工編號</label>
                             <div class="col-sm-10">
