--- a/admin/personnel.html
+++ b/admin/personnel.html
@@ -1,87 +1,64 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>祐肯請假系統</title>
-        
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-		<meta content="utf-8" http-equiv="encoding">
-		<link rel="icon" type="image/x-icon" href="../../img/logo.ico">
-		
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-		<link rel="stylesheet" href="../css/adminPersonnel.css">
-	</head>
-    <body>
-		<header>
-				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					<div class="container-fluid">
-						<a class="navbar-brand" href="#"><img src="../img/logo.png"></a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon">
-								
-							</span>
-						</button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./review.html">假單審核</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./information.html">員工請假資訊</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./maintain.html">新增員工</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./personnel.html">在職員工</a>
-								</li>
-                                <li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./log.html">過審紀錄</a>
-								</li>
-                                <li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</nav>
-		</header>
-		
-		
-
-		<section>
-			<div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h1>在職員工</h1>
-                        <div>
-                            <table class="table table-bordered table-striped">
-                                <thead  class="table-dark">
-                                    <tr>
-                                        <th>員工編號</th>
-                                        <th>身分證字號</th>
-                                        <th>員工姓名</th>
-                                        <th>到職日期</th>
-                                        <th>電子信箱</th>
-                                        <th>直屬主管</th>
-										<th>是否審核</th>
-										<th>刪除員工</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="table">
-								</tbody>
-							</table>
-                        </div>
-                    </div>
+<html lang="zh-Hant-TW">
+<head>
+    <title>祐肯請假系統</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="../../img/logo.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/adminPersonnel.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="Logo"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"><a class="nav-link active" href="./review.html">假單審核</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./information.html">員工請假資訊</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./maintain.html">新增員工</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./personnel.html">在職員工</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./log.html">過審紀錄</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./calendar.html">行事曆</a></li>
+                    </ul>
                 </div>
             </div>
-		</section>
-
-		<script src="../js/jquery-3.7.1.min.js"></script>
-        <script src="../js/cookieOperation.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-        <script src="../js/adminPersonnel.js"></script>
-    </body>
+        </nav>
+    </header>
+    <main>
+        <div class="container my-4">
+            <h1>在職員工</h1>
+            <div class="table-responsive">
+                <table class="table table-bordered table-striped table-hover">
+                    <thead class="table-dark">
+                        <tr>
+                            <th>員工編號</th>
+                            <th>身分證字號</th>
+                            <th>員工姓名</th>
+                            <th>到職日期</th>
+                            <th>電子信箱</th>
+                            <th>直屬主管</th>
+                            <th>是否審核</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table"></tbody>
+                </table>
+            </div>
+            <nav class="d-flex justify-content-between align-items-center my-3">
+                <button id="prevPage" class="btn btn-primary">上一頁</button>
+                <span id="pageInfo"></span>
+                <button id="nextPage" class="btn btn-primary">下一頁</button>
+            </nav>
+        </div>
+    </main>
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/cookieOperation.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../js/adminPersonnel.js"></script>
+</body>
 </html>
