--- a/employee/checkIn.html
+++ b/employee/checkIn.html
@@ -47,7 +47,7 @@
 			<div class="container">
                 <div class="row">
                     <div class="col-4 text-center">
-                        <button type="button" class="btn btn-success">
+                        <button id="workButton" type="button" class="btn btn-success">
                             <img src="../img/work.jpg" class="img-fluid">
                         </button>
                     </div>
@@ -57,7 +57,7 @@
                     </div>
                 
                     <div class="col-4 text-center">
-                        <button type="button" class="btn btn-danger">
+                        <button id="restButton" type="button" class="btn btn-danger">
                             <img src="../img/getOffWork.png" class="img-fluid">
 						</button>
                     </div>
