請假頁面新增總特休時數以及已請特休時數

--- a/employee/leave.html
+++ b/employee/leave.html
@@ -49,6 +49,10 @@
 					<div class="col text-center">
 						<div class="main">
 							<h1>請假</h1>
+							<div>
+								<p id="quota"></p>
+								<p id="annual"></p>
+							</div>
 							<!-- <form action="http://eucan.ddns.net:3000/request" method="post" enctype="multipart/form-data"> -->
 							<div id="dayofftypeD"  class="input">
 								<select id="type">
