--- a/admin/review.html
+++ b/admin/review.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>祐肯請假系統 - 假單審核</title>
+    <title>祐肯請假系統</title>
     <link rel="icon" type="image/x-icon" href="../../img/logo.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/adminReview.css">
