--- a/employee/documental.html
+++ b/employee/documental.html
@@ -50,11 +50,97 @@
                 </div>
             </div>
 		</section>
+		
+		<!-- 正在審核的假單 -->
+		<section class="my-4" id="wait">
+			<div class="container">
+				<div class="text-center">
+					<h1 class="mb-3">正在審核的假單</h1>
+					<h2 id="dataLong" class="text-muted"></h2>
+				</div>
+	
+				<!-- 加載動畫 -->
+				<div id="loading" class="text-center mt-3" style="display: none;">
+					<div class="spinner-border text-primary" role="status">
+						<span class="visually-hidden">載入中...</span>
+					</div>
+				</div>
+	
+				<!-- 假單顯示區 -->
+				<div class="d-flex justify-content-center">
+					<div id="card-body-wait" class="text-nowrap p-3 border rounded shadow-sm bg-light" style="max-height: 500px; overflow-y: auto; min-width: 300px;">
+						<p class="text-center text-muted">目前無待審核的假單</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- 核准的假單 -->
+		<section class="my-4" id="approve">
+			<div class="container">
+				<div class="text-center">
+					<h1 class="mb-3">核准的假單</h1>
+					<h2 id="dataLong" class="text-muted"></h2>
+				</div>
+	
+				<!-- 加載動畫 -->
+				<div id="loading" class="text-center mt-3" style="display: none;">
+					<div class="spinner-border text-primary" role="status">
+						<span class="visually-hidden">載入中...</span>
+					</div>
+				</div>
+	
+				<!-- 假單顯示區 -->
+				<div class="d-flex justify-content-center">
+					<div id="card-body-approve" class="text-nowrap p-3 border rounded shadow-sm bg-light" style="max-height: 500px; overflow-y: auto; min-width: 300px;">
+						<p class="text-center text-muted">目前無核准的假單</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- 被拒絕的假單 -->
+		<section class="my-4" id="reject">
+			<div class="container">
+				<div class="text-center">
+					<h1 class="mb-3">被拒絕的假單</h1>
+					<h2 id="dataLong" class="text-muted"></h2>
+				</div>
+	
+				<!-- 加載動畫 -->
+				<div id="loading" class="text-center mt-3" style="display: none;">
+					<div class="spinner-border text-primary" role="status">
+						<span class="visually-hidden">載入中...</span>
+					</div>
+				</div>
+	
+				<!-- 假單顯示區 -->
+				<div class="d-flex justify-content-center">
+					<div id="card-body-reject" class="text-nowrap p-3 border rounded shadow-sm bg-light" style="max-height: 500px; overflow-y: auto; min-width: 300px;">
+						<p class="text-center text-muted">目前無被拒絕的假單</p>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section>
+			<div class="container">
+                <div class="col">
+					<ul>
+						<il>
+							<a class="nav-link active" aria-current="page" href="./information.html">查看詳細資料</a>
+						</il>
+					</ul>
+                </div>
+            </div>
+			
+		</section>
 
 		<script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-    </body>
+		<script src="../js/employeeDocumental.js"></script>
+	</body>
 </html>
