員工端詳細資料完成，行事曆使用google先行導入

--- a/employee/information.html
+++ b/employee/information.html
@@ -9,7 +9,7 @@
 		<link rel="icon" type="image/x-icon" href="../../img/logo.ico">
 		
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-		<link rel="stylesheet" href="../css/employeeDocumental.css">
+		<link rel="stylesheet" href="../css/employeeInformation.css">
 	</head>
     <body>
 		<header>
@@ -49,6 +49,58 @@
                     <h1>詳細資料</h1>
                 </div>
             </div>
+		</section>
+
+		<section>
+			<div class="container">
+				<div class="col">
+					<div>
+						<table class="table table-bordered table-striped">
+							<tbody>
+								<tr id="year">
+									<th>年資</th>
+								</tr>
+								<tr id="quota">
+									<th>總特休時數(hr)</th>
+								</tr>
+								<tr id="annual">
+									<th>已請特休假</th>
+								</tr>
+								<tr id="personal">
+									<th>已請事假</th>
+								</tr>
+								<tr id="care">
+									<th>已請家庭照顧假</th>
+								</tr>
+								<tr id="sick">
+									<th>已請普通傷病假</th>
+								</tr>
+								<tr id="wedding">
+									<th>已請婚假</th>
+								</tr>
+								<tr id="funeral">
+									<th>已請喪假</th>
+								</tr>
+								<tr id="birth">
+									<th>已請分娩假</th>
+								</tr>
+								<tr id="pcheckup">
+									<th>已請產檢假</th>
+								</tr>
+								<tr id="miscarriage">
+									<th>已請流產假</th>
+								</tr>
+								<tr id="paternity">
+									<th>已請陪產假</th>
+								</tr>
+								<tr id="maternity">
+									<th>已請產假</th>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
 		</section>
 
 		<script src="../js/jquery-3.7.1.min.js"></script>
