--- a/admin/calendar copy.html
+++ b/admin/calendar copy.html
@@ -15,7 +15,7 @@
 		<header>
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
 					<div class="container-fluid">
-						<a class="navbar-brand" href="./employeeMain.html"><img src="../img/logo.png"></a>
+						<a class="navbar-brand" href="#"><img src="../img/logo.png"></a>
 						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon">
 								
@@ -24,15 +24,21 @@
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./checkIn.html">打卡</a>
+									<a class="nav-link active" aria-current="page" href="./review.html">假單審核</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./leave.html">請假</a>
+									<a class="nav-link active" aria-current="page" href="./information.html">員工請假資訊</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./documental.html">請假紀錄</a>
+									<a class="nav-link active" aria-current="page" href="./maintain.html">新增員工</a>
 								</li>
 								<li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./personnel.html">在職員工</a>
+								</li>
+                                <li class="nav-item">
+									<a class="nav-link active" aria-current="page" href="./log.html">過審紀錄</a>
+								</li>
+                                <li class="nav-item">
 									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
 								</li>
 							</ul>
@@ -57,19 +63,29 @@
 			<div class="container">
 				<div class="row">
 					<div class="col">
+						<div id="search">
+							<input placeholder="年分" id="year" class="search">
+							<input placeholder="月份" id="month" class="search">
+                            <button id="searching" class="search">搜尋</button>
+						</div>
+
 						<div id="calendar">
-							<iframe src="https://docs.google.com/spreadsheets/d/11_Zhaax_tsKy9Kp8dFtLOQjAdGkwB7UR/preview" width="900" height="600" frameborder="0"></iframe>
+							
+						</div>
+
+						<div id="download">
+
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 
-
 		<script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.1/dist/umd/popper.min.js" integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
-    </body>
+		<script src="../js/adminCalendar.js"></script>
+	</body>
 </html>
