在職員工修正直屬主管只能輸入0和1，改換成下拉式選單。

--- a/admin/maintain.html
+++ b/admin/maintain.html
@@ -82,7 +82,11 @@
 
                             <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg input">直屬主管</label>
                             <div class="col-sm-10">
-                                <input placeholder="直屬主管" id="mgroup" class="form-control form-control-lg input">
+                                <select id="mgroup" class="form-select form-select-lg mb-3 input">
+                                    <option>選擇主管</option>
+                                    <option id="1">CAT</option>
+                                    <option id="0">JEFF</option>
+                                </select>
                             </div>
 
                             <label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg input">審核確認</label>
