--- a/admin/record.html
+++ b/admin/record.html
@@ -38,13 +38,9 @@
                     <thead class="table-dark">
                         <tr>
                             <th>員工編號</th>
-                            <th>身分證字號</th>
                             <th>員工姓名</th>
-                            <th>到職日期</th>
-                            <th>電子信箱</th>
-                            <th>直屬主管</th>
-                            <th>是否審核</th>
-                            <th>操作</th>
+                            <th>上班時間</th>
+                            <th>下班時間</th>
                         </tr>
                     </thead>
                     <tbody id="table"></tbody>
@@ -60,6 +56,6 @@
     <script src="../js/jquery-3.7.1.min.js"></script>
     <script src="../js/cookieOperation.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/adminPersonnel.js"></script>
+    <script src="../js/"></script>
 </body>
 </html>
