--- a/admin/review.html
+++ b/admin/review.html
@@ -18,13 +18,14 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item"><a class="nav-link active" href="./review.html">假單審核</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./information.html">員工請假資訊</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./maintain.html">新增員工</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./personnel.html">在職員工</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./log.html">過審紀錄</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./calendar.html">行事曆</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./information.html">員工請假資訊</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./maintain.html">新增員工</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./personnel.html">在職員工</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./log.html">過審紀錄</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./calendar.html">行事曆</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./record.html">打卡紀錄</a></li>
                     </ul>
                 </div>
             </div>
