--- a/admin/calendar.html
+++ b/admin/calendar.html
@@ -22,25 +22,14 @@
 							</span>
 						</button>
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./review.html">假單審核</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./information.html">員工請假資訊</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./maintain.html">新增員工</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./personnel.html">在職員工</a>
-								</li>
-                                <li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./log.html">過審紀錄</a>
-								</li>
-                                <li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="./calendar.html">行事曆</a>
-								</li>
+							<ul class="navbar-nav me-auto">
+								<li class="nav-item"><a class="nav-link active" href="./review.html">假單審核</a></li>
+								<li class="nav-item"><a class="nav-link active" href="./information.html">員工請假資訊</a></li>
+								<li class="nav-item"><a class="nav-link active" href="./maintain.html">新增員工</a></li>
+								<li class="nav-item"><a class="nav-link active" href="./personnel.html">在職員工</a></li>
+								<li class="nav-item"><a class="nav-link active" href="./log.html">過審紀錄</a></li>
+								<li class="nav-item"><a class="nav-link active" href="./calendar.html">行事曆</a></li>
+								<li class="nav-item"><a class="nav-link active" href="./record.html">打卡紀錄</a></li>
 							</ul>
 						</div>
 					</div>
