在職員工顯示分類，分成顯示admin和employee

--- a/admin/personnel.html
+++ b/admin/personnel.html
@@ -33,6 +33,8 @@
     <main>
         <div class="container my-4">
             <h1>在職員工</h1>
+            <button id="employee">顯示員工帳號</button>
+            <button id="admin">顯示主管帳號</button>
             <div class="table-responsive">
                 <table class="table table-bordered table-striped table-hover">
                     <thead class="table-dark">
