員工打卡修正

--- a/admin/record.html
+++ b/admin/record.html
@@ -23,7 +23,7 @@
                         <li class="nav-item"><a class="nav-link active" href="./maintain.html">新增員工</a></li>
                         <li class="nav-item"><a class="nav-link active" href="./personnel.html">在職員工</a></li>
                         <li class="nav-item"><a class="nav-link active" href="./log.html">過審紀錄</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="./calendar.html">行事曆</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="./calendar copy.html">行事曆</a></li>
                         <li class="nav-item"><a class="nav-link active" href="./record.html">打卡紀錄</a></li>
                     </ul>
                 </div>
