主管端行事曆修正，員工請假紀錄排版

--- a/employee/information.html
+++ b/employee/information.html
@@ -54,12 +54,9 @@
 		<section>
 			<div class="container">
 				<div class="col">
-					<div>
-						<label for="colFormLabelLg" class="col-sm-2 col-form-label col-form-label-lg input">日期查詢</label>
-                        <div class="col-sm-10">
-                            <input placeholder="輸入範例2025-02-12" id="data" class="form-control form-control-lg input">
-							<p></p>
-                        </div>
+					<div id="search" >
+						<input placeholder="輸入範例2025-02-12" id="date" class="search">
+						<button id="searching" class="search">搜尋</button>
 					</div>
 					<div>
 						<table class="table table-bordered table-striped">
